test/corpus/edge_cases.txt
==================
Unclosed property
==================

User {UserId logged in

---

(template
  (literal_text))

==================
Empty property
==================

User {} logged in

---

(template
  (literal_text)
  (property
    (open_brace)
    (close_brace))
  (literal_text))

==================
Property with only format
==================

Price: {:F2}

---

(template
  (literal_text)
  (property
    (open_brace)
    format: (format_spec
      format_string: (identifier))
    (close_brace)))

==================
Multiple open braces
==================

{{{{

---

(template
  (ERROR
    (open_go)
    (open_go)))

==================
Literal braces not forming properties
==================

{ not a property } and { also not }

---

(template
  (literal_text))

==================
Mixed valid and invalid
==================

Valid {Property} then { invalid and {{.Valid}}

---

(template
  (literal_text)
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (literal_text)
  (go_property
    (open_go)
    name: (identifier)
    (close_go)))

==================
Properties at boundaries
==================

{Start} middle {End}

---

(template
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (literal_text)
  (property
    (open_brace)
    name: (identifier)
    (close_brace)))

==================
Adjacent properties
==================

{Prop1}{Prop2}{Prop3}

---

(template
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (property
    (open_brace)
    name: (identifier)
    (close_brace)))

==================
Unicode in literal text
==================

用户 {UserId} 已登录 🎉

---

(template
  (literal_text)
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (literal_text))

==================
Escaped characters in literal
==================

Path: C:\Users\{Username}\Documents

---

(template
  (literal_text)
  (property
    (open_brace)
    name: (identifier)
    (close_brace))
  (literal_text))
