test/corpus/go_templates.txt
==================
Simple Go template
==================

User {{.UserId}} logged in

---

(template
  (literal_text)
  (go_property
    (open_go)
    name: (identifier)
    (close_go))
  (literal_text))

==================
Go template without dot (invalid syntax - creates ERROR)
==================

User {{UserId}} logged in

---

(template
  (literal_text)
  (ERROR
    (open_go)
    (identifier))
  (literal_text))

==================
Go template with dotted name
==================

Service {{.service.name}} in {{.service.namespace}}

---

(template
  (literal_text)
  (go_property
    (open_go)
    name: (dotted_name
      (identifier)
      (identifier))
    (close_go))
  (literal_text)
  (go_property
    (open_go)
    name: (dotted_name
      (identifier)
      (identifier))
    (close_go)))

==================
Go template numeric index (invalid - should use single braces, creates ERROR)
==================

Item {{0}} of {{1}}

---

(template
  (literal_text)
  (ERROR
    (open_go)
    (numeric_index))
  (literal_text)
  (ERROR
    (open_go)
    (numeric_index))
  (literal_text))

==================
Built-in property simple
==================

${Timestamp} ${Level}: ${Message}

---

(template
  (builtin_property
    (open_builtin)
    name: (identifier)
    (close_brace))
  (literal_text)
  (builtin_property
    (open_builtin)
    name: (identifier)
    (close_brace))
  (literal_text)
  (builtin_property
    (open_builtin)
    name: (identifier)
    (close_brace)))

==================
Built-in property with format
==================

[${Timestamp:HH:mm:ss} ${Level:u3}] ${Message}

---

(template
  (literal_text)
  (builtin_property
    (open_builtin)
    name: (identifier)
    format: (format_spec
      format_string: (identifier))
    (close_brace))
  (literal_text)
  (builtin_property
    (open_builtin)
    name: (identifier)
    format: (format_spec
      format_string: (identifier))
    (close_brace))
  (literal_text)
  (builtin_property
    (open_builtin)
    name: (identifier)
    (close_brace)))
